<resources>
    <string name="app_name">EdikOdik</string>

    <string name="hello_world">EdikOdik.com</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">Home</string>

    <string name="home">Home</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="signout">Sign Out</string>
    <string name="freebusinesslisting">Free Business Listing</string>
    <string name="about_edikodik">About EdikOdik</string>
    <string name="about">About</string>
    <string name="termsandconditions">Terms and Conditions</string>
    <string name="contact">Contact</string>
    <string name="advertise">Advertise</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="action_example">Example action</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_category">Category</string>
    <string name="facebook_app_id">316475228687814</string>
    <string name="fb_login_protocol_scheme">fb316475228687814</string>
</resources>
